--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -23,6 +23,8 @@
         android:background="@drawable/edit_box"
         android:elevation="5dp"
         android:paddingLeft="16dp"
+        android:focusable="false"
+        android:clickable="true"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
