--- a/app/src/main/res/layout/fragment_mylist.xml
+++ b/app/src/main/res/layout/fragment_mylist.xml
@@ -8,13 +8,41 @@
     android:orientation="vertical">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/material_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:title="내 목록보기"
-        app:titleCentered="true"
-        app:menu="@menu/toolbar_sort"
-        app:navigationIcon="@drawable/ic_action_back" />
+        android:layout_height="?attr/actionBarSize"
+        app:navigationIcon="@drawable/ic_action_back"
+        app:title="내 목록보기">
+
+        <!-- MaterialToolbar에 추가된 스피너 -->
+        <Spinner
+            android:id="@+id/toolbar_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:spinnerMode="dropdown"
+            android:layout_gravity="end" />
+
+    </com.google.android.material.appbar.MaterialToolbar>
+
+
+<!--    <com.google.android.material.appbar.MaterialToolbar-->
+<!--        android:id="@+id/toolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:title="내 목록보기"-->
+<!--        app:titleCentered="true"-->
+<!--        app:menu="@menu/toolbar_sort"-->
+<!--        app:navigationIcon="@drawable/ic_action_back" />-->
+
+<!--    <Spinner-->
+<!--        android:id="@+id/spinner"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:entries="@array/menu_items"-->
+<!--        android:layout_gravity="right"-->
+<!--        />-->
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
