--- a/app/src/main/res/layout/fragment_yourlist.xml
+++ b/app/src/main/res/layout/fragment_yourlist.xml
@@ -7,18 +7,66 @@
     tools:context=".fragments.MylistFragment"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:title="공유 목록보기"
-        app:titleCentered="true"
-        app:navigationIcon="@drawable/ic_action_back" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+
+    <com.google.android.material.appbar.MaterialToolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/material_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        />
+        android:layout_height="?attr/actionBarSize"
+        app:navigationIcon="@drawable/ic_action_back"
+        app:title="공유 목록보기">
+
+        <!-- MaterialToolbar에 추가된 스피너 -->
+        <Spinner
+            android:id="@+id/toolbar_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:spinnerMode="dropdown"
+            android:layout_gravity="end" />
+
+    </com.google.android.material.appbar.MaterialToolbar>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/map_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.naver.maps.map.MapFragment"
+            android:visibility="gone"/>
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/show_map_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="634dp"
+            android:layout_marginLeft="275dp"
+            android:backgroundTint="#2B5CBF"
+            android:elevation="5dp"
+            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+            android:text="지도보기"
+            android:textSize="16dp"
+            android:textColor="@color/white"
+            />
+
+
+
+    </FrameLayout>
+
+
+
+
+
+
+
 </LinearLayout>
