--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,43 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="pointcolor">#2B5CBF</color>
+
+    <!-- 파스텔톤 컬러 -->
+    <color name="pastel_pink">#FFB3B3</color>
+    <color name="pastel_blue">#AEC6CF</color>
+    <color name="pastel_green">#77DD77</color>
+    <color name="pastel_yellow">#FDFD96</color>
+    <color name="pastel_purple">#CBAACB</color>
+
+    <!-- 블루톤 컬러 -->
+    <color name="light_blue">#ADD8E6</color>
+    <color name="deep_sky_blue">#00BFFF</color>
+    <color name="navy_blue">#1E3A8A</color>
+    <color name="royal_blue">#4169E1</color>
+    <color name="blue_gray">#6A85B6</color>
+
+    <!-- 그린톤 컬러 -->
+    <color name="mint_green">#98FF98</color>
+    <color name="sea_green">#2E8B57</color>
+    <color name="forest_green">#228B22</color>
+    <color name="olive_green">#808000</color>
+    <color name="lime_green">#32CD32</color>
+
+    <!-- 네온 컬러 -->
+    <color name="neon_pink">#FF6EC7</color>
+    <color name="neon_yellow">#FFFF00</color>
+    <color name="neon_green">#39FF14</color>
+    <color name="neon_orange">#FF5F1F</color>
+    <color name="neon_blue">#1F51FF</color>
+
+    <!-- 모던 그레이톤 컬러 -->
+    <color name="light_gray">#D3D3D3</color>
+    <color name="gray">#808080</color>
+    <color name="dark_gray">#404040</color>
+    <color name="charcoal">#36454F</color>
+    <color name="slate_gray">#708090</color>
+
 </resources>
