--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -101,6 +101,11 @@
                 android:layout_marginTop="8dp"
                 android:elevation="4dp">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tv_point_today"
                     android:layout_width="wrap_content"
@@ -108,6 +113,17 @@
                     android:text="적립완료 1점"
                     android:textSize="16sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_point_score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="누적 117점"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="180dp"/>
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/tv_point_detail"
@@ -130,6 +146,7 @@
                 android:layout_marginTop="8dp"
                 android:elevation="4dp">
 
+
                 <TextView
                     android:id="@+id/tv_level_notice"
                     android:layout_width="wrap_content"
@@ -138,13 +155,53 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <ProgressBar
+
+
+
+                <!-- ProgressBar -->
+                <com.mackhartley.roundedprogressbar.RoundedProgressBar
+                    android:id="@+id/roundedProgressBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    app:rpbProgressColor="@color/pointcolor"
+                    android:layout_marginTop="12dp"
+                    app:rpbBackgroundColor="#FFE0E0E0"
+                    app:rpbCornerRadius="12dp"
+                    app:rpbProgressTextColor="@color/white"
+                    app:rpbTextSize="12sp"
+                    />
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:progress="20"
-                    android:max="100"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
-                    android:layout_marginTop="8dp" />
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/tv_now_level"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="레벨 1"
+                        android:textColor="@color/gray"
+                        android:textSize="12sp"
+                        android:layout_gravity="start"
+                        android:layout_weight="1"
+                        />
+                    <TextView
+                        android:id="@+id/tv_next_level"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="레벨 2"
+                        android:textColor="@color/gray"
+                        android:textSize="12sp"
+                        android:layout_gravity="end"
+                        />
+
+
+                </LinearLayout>
+
+
+
             </LinearLayout>
 
             <!-- 추천 장소 -->
