--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -16,10 +16,9 @@
         app:menu="@menu/toolbar"
         app:navigationIcon="@drawable/ic_action_back" />
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:scrollbars="none"
         android:background="#F5F5F5"
         android:padding="8dp">
@@ -101,30 +100,96 @@
                 android:layout_marginTop="8dp"
                 android:elevation="4dp">
 
+
+            <!-- 친구 검색-->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_point_today"
+                    android:id="@+id/tv_search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="적립완료 1점"
+                    android:text="친구, 가족, 연인을 팔로우 하세요."
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     />
 
-                <TextView
-                    android:id="@+id/tv_point_score"
-                    android:layout_width="wrap_content"
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="누적  점"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/pointcolor"
-                    android:layout_marginLeft="180dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    >
+
+                    <EditText
+                        android:id="@+id/search_edit_text"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:layout_weight="1"
+                        android:hint="이메일을 입력하세요"
+                        android:inputType="textEmailAddress"
+                        android:backgroundTint="@color/dark_gray"
+                        android:padding="8dp" />
+
+                    <!-- 팔로우 추가 버튼 -->
+                    <TextView
+                        android:id="@+id/tv_search_follow"
+                        android:layout_width="100dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/bg_box_gray"
+                        android:gravity="center"
+                        android:text="검색"
+                        android:textSize="16sp"
+                        android:layout_marginLeft="12dp"/>
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="#FFFFFF"
+                android:padding="16dp"
+                android:layout_marginTop="8dp"
+                android:elevation="4dp">
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_point_today"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="적립완료 1점"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:layout_weight="1"
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_point_score"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="누적  점"
+                        android:layout_marginRight="3dp"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/pointcolor"
+                        android:layout_marginLeft="180dp"/>
 
                 </LinearLayout>
 
@@ -138,6 +203,7 @@
 
 
             </LinearLayout>
+
 
             <!-- 레벨 진행 바 -->
             <LinearLayout
