--- a/app/src/main/res/layout/fragment_addmemo_bottomsheet.xml
+++ b/app/src/main/res/layout/fragment_addmemo_bottomsheet.xml
@@ -60,8 +60,8 @@
     </LinearLayout>
     <ImageView
         android:id="@+id/memo_image"
-        android:layout_width="230dp"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:src="@drawable/add_camera3"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
